--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://aafbf460-f84b-4ec3-87dd-a570b46edf4a.preview.emergentagent.com
 WDS_SOCKET_PORT=443
